add text to auto

--- a/flex.html
+++ b/flex.html
@@ -12,7 +12,10 @@
     <main class="all">
         <div class="vverx">
             <section class="auto">
-
+                <div class="autotext">
+                    <div class="november">November 28, 2015</div>
+                    <div class="fantast">Fantastic design of 2015 conecpt cars</div>
+                </div>
             </section>
             <section class="girl">
                     <img src="./IMG/Layer2.png" alt="">
