--- a/flex.html
+++ b/flex.html
@@ -10,48 +10,48 @@
 </head>
 <body>
     <main class="all">
-        <div class="vverx">
-            <section class="auto">
+        <section class="vverx">
+            <div class="auto">
                 <div class="autotext">
                     <div class="november">November 28, 2015</div>
                     <div class="fantast">Fantastic design of 2015 conecpt cars</div>
                 </div>
-            </section>
-            <section class="girl">
+            </div>
+            <div class="girl">
                     <img src="./IMG/Layer2.png" alt="">
                     <div class="cont">
                         <div class="november">November 24, 2015</div>
                         <div class="howtofind">How to find design inspiration in the simple things around you</div>
                         <div class="lico"><img src="./IMG/lico.png" alt=""></div>
                     </div>
-            </section>
-        </div>
-        <div class="niz"> 
-            <section class="girl">
+            </div>
+        </section>
+        <section class="niz"> 
+            <div class="girl">
                     <img src="./IMG/Layer5.png" alt="">
                     <div class="cont">
                         <div class="november">November 18, 2015</div>
                         <div class="howtofind">The only guide to choosing website photos you'll ever need</div>
                         <div class="lico"><img src="./IMG/lico.png" alt=""></div>
                     </div>
-            </section>
-            <section class="girl">
+            </div>
+            <div class="girl">
                 <img src="./IMG/Layer7.png" alt="">
                 <div class="cont">
                     <div class="november"></div>
                     <div class="howtofind1">Growth hack your way to a successful freelance career</div>
                     <div class="lico"><img src="./IMG/lico.png" alt=""></div>
                 </div>
-            </section>
-            <section class="girl">
+            </div>
+            <div class="girl">
                 <img src="./IMG/Layer9.png" alt="">
                 <div class="cont">
                     <div class="november">November 08, 2015</div>
                     <div class="howtofind">Get 80% off dslr photography course bndle</div>
                     <div class="lico"><img src="./IMG/lico.png" alt=""></div>
                 </div>
-            </section>
-        </div>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="load">
