--- a/index.html
+++ b/index.html
@@ -11,56 +11,58 @@
 </head>
 <body>
     <div class="link"><a href="./flex.html">link to second homework</a></div>
-    <div class="container">
-        <section class="boki"> 
-            <div class="dol">
-                $2
+    <main>
+        <section class="container">
+            <div class="boki"> 
+                <div class="dol">
+                    $2
+                </div>
+                <div class="gold">
+                    <div class="smokegold"><img src="./IMG/smokebronze.png"></div>
+                    <img src="./IMG/cupbronze.png">
+                    <div class="beangold"><img src="./IMG/bean.png"></div>    
+                </div> 
+                <div class="podchash">
+                    Bronze
+                </div>
+                <div class="any">
+                    any cup of coffe until $3
+                </div>
             </div>
-            <div class="gold">
-                <div class="smokegold"><img src="./IMG/smokebronze.png"></div>
-                <img src="./IMG/cupbronze.png">
-                <div class="beangold"><img src="./IMG/bean.png"></div>    
-            </div> 
-            <div class="podchash">
-                Bronze
+            <div class="cntr">
+                <div class="dol">
+                    $3
+                </div>
+                <div class="gold">
+                    <div class="smokegold"><img src="./IMG/smokeorange.png"></div>
+                    <img src="./IMG/cuporange.png">
+                    <div class="beangold"><img src="./IMG/bean.png"></div>    
+                </div> 
+                <div class="podchash">
+                    Gold
+                </div>
+                <div class="any">
+                    any cup of coffe until $5
+                </div>
             </div>
-            <div class="any">
-                any cup of coffe until $3
+            <div class="boki">
+                <div class="dol">
+                    $2.5
+                </div>
+                <div class="gold">
+                    <div class="smokegold"><img src="./IMG/smokesilver.png"></div>
+                    <img src="./IMG/cupsilver.png">
+                    <div class="beangold"><img src="./IMG/bean.png"></div>    
+                </div> 
+                <div class="podchash">
+                    Silver
+                </div>
+                <div class="any">
+                    any cup of coffe until $4
+                </div>
             </div>
         </section>
-        <section class="cntr">
-            <div class="dol">
-                $3
-            </div>
-            <div class="gold">
-                <div class="smokegold"><img src="./IMG/smokeorange.png"></div>
-                <img src="./IMG/cuporange.png">
-                <div class="beangold"><img src="./IMG/bean.png"></div>    
-            </div> 
-            <div class="podchash">
-                Gold
-            </div>
-            <div class="any">
-                any cup of coffe until $5
-            </div>
-        </section>
-        <section class="boki">
-            <div class="dol">
-                $2.5
-            </div>
-            <div class="gold">
-                <div class="smokegold"><img src="./IMG/smokesilver.png"></div>
-                <img src="./IMG/cupsilver.png">
-                <div class="beangold"><img src="./IMG/bean.png"></div>    
-            </div> 
-            <div class="podchash">
-                Silver
-            </div>
-            <div class="any">
-                any cup of coffe until $4
-            </div>
-        </section>
-    </div>
+    </main>
     
 </body>
 </html>
