--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="link"><a href="./flex.html">link to second homework</a></div>
+    <div class="link"><a href="./flex.html" target="_blank">link to second homework</a></div>
     <main>
         <section class="container">
             <div class="boki"> 
